# src/app/schemas/roomSchemas.ts
@@ -44,6 +44,29 @@ export const postRoomSchema = Yup.object({
         .min(0, "Price per night cannot be negative"),
 });
 
+// post
+export const patchRoomSchema = Yup.object({
+    name: Yup.string()
+        .trim()
+        .required("Room name is required")
+        .min(3, "Name must be at least 3 characters")
+        .max(15, "Name must be at most 15 characters"),
+
+    description: Yup.string()
+        .trim()
+        .required("Room description is required")
+        .max(100, "Description must be at most 100 characters"),
+
+    images: Yup.array()
+        .required("Exactly 4 photos must be uploaded.")
+        .min(4, "Exactly 4 photos must be uploaded.")
+        .max(4, "Exactly 4 photos must be uploaded."),
+
+    pricePerNight: Yup.number()
+        .required("Price per night is required")
+        .min(0, "Price per night cannot be negative"),
+});
+
 export const patchRateRoomSchema = Yup.object({
     value: Yup.number()
         .required()
